--- a/DiscoverYourself/Resources/Views/Home/Index.en.resx
+++ b/DiscoverYourself/Resources/Views/Home/Index.en.resx
@@ -18,4 +18,7 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="WelcomeMsg" xml:space="preserve">
+        <value>Welcome</value>
+    </data>
 </root>
