--- a/DiscoverYourself/Resources/Views/Account/Login.en.resx
+++ b/DiscoverYourself/Resources/Views/Account/Login.en.resx
@@ -21,4 +21,16 @@
     <data name="WelcomeMsg" xml:space="preserve">
         <value>Welcome</value>
     </data>
+    <data name="LoginMsg" xml:space="preserve">
+        <value>Login</value>
+    </data>
+    <data name="RegisterMsg" xml:space="preserve">
+        <value>Register</value>
+    </data>
+    <data name="EmailMsg" xml:space="preserve">
+        <value>Email</value>
+    </data>
+    <data name="PasswordMsg" xml:space="preserve">
+        <value>Password</value>
+    </data>
 </root>
