--- a/DiscoverYourself/Resources/Views/Home/Reports.tr.resx
+++ b/DiscoverYourself/Resources/Views/Home/Reports.tr.resx
@@ -30,4 +30,7 @@
     <data name="DevelopmentReportMsg" xml:space="preserve">
         <value>Gelişim Raporu</value>
     </data>
+    <data name="AccumulationReportDesc" xml:space="preserve">
+        <value>Accumulation report provides an overview of financial growth.</value>
+    </data>
 </root>
