--- a/DiscoverYourself/Resources/Views/Home/Reports.tr.resx
+++ b/DiscoverYourself/Resources/Views/Home/Reports.tr.resx
@@ -48,4 +48,7 @@
     <data name="ChooseReportsMsg" xml:space="preserve">
         <value>Detayını görüntülemek istediğin raporu seç</value>
     </data>
+    <data name="ReportsPageMsg" xml:space="preserve">
+        <value>Rapor Sayfası</value>
+    </data>
 </root>
