--- a/DiscoverYourself/Resources/Views/Reports/EducationReport.en.resx
+++ b/DiscoverYourself/Resources/Views/Reports/EducationReport.en.resx
@@ -18,4 +18,13 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="StartDateMsg" xml:space="preserve">
+        <value>Start Date</value>
+    </data>
+    <data name="EndDateMsg" xml:space="preserve">
+        <value>End Date</value>
+    </data>
+    <data name="EducationReportMsg" xml:space="preserve">
+        <value>Education Report</value>
+    </data>
 </root>
