--- a/DiscoverYourself/Resources/Views/Reports/EducationReport.en.resx
+++ b/DiscoverYourself/Resources/Views/Reports/EducationReport.en.resx
@@ -28,27 +28,27 @@
         <value>Education Report</value>
     </data>
     <data name="TitleMsg" xml:space="preserve">
-        <value />
+        <value>Title</value>
     </data>
     <data name="DescriptionMsg" xml:space="preserve">
-        <value />
+        <value>Description</value>
     </data>
     <data name="TopicsMsg" xml:space="preserve">
-        <value />
+        <value>Topic</value>
     </data>
     <data name="DifficultyMsg" xml:space="preserve">
-        <value />
+        <value>Difficulty</value>
     </data>
     <data name="TargetAudienceMsg" xml:space="preserve">
-        <value />
+        <value>Target Audience</value>
     </data>
     <data name="MilestonesMsg" xml:space="preserve">
-        <value />
+        <value>Milestones</value>
     </data>
     <data name="SuccessCriteriaMsg" xml:space="preserve">
-        <value />
+        <value>Success Criteria</value>
     </data>
     <data name="IsCompletedMsg" xml:space="preserve">
-        <value />
+        <value>Is Completed</value>
     </data>
 </root>
