--- a/DiscoverYourself/Resources/Views/Reports/DevelopmentReports.en.resx
+++ b/DiscoverYourself/Resources/Views/Reports/DevelopmentReports.en.resx
@@ -39,4 +39,7 @@
     <data name="ResourcesNeededMsg" xml:space="preserve">
         <value>Resources Needed</value>
     </data>
+    <data name="FeedbackMsg" xml:space="preserve">
+        <value>Feedback</value>
+    </data>
 </root>
